--- a/patterns/02-organismes-lists-article_list/02-organismes-lists-article_list.mustache
+++ b/patterns/02-organismes-lists-article_list/02-organismes-lists-article_list.mustache
@@ -1,2 +1,7 @@
-{{>molecules-article_block}} {{>molecules-article_block}} {{>molecules-article_block}} {{>molecules-article_block}} {{>molecules-article_block}}
-<a href="#">See more</a>
+<div class="list-article">
+  {{>molecules-article_block}} {{>molecules-article_block}} {{>molecules-article_block}} {{>molecules-article_block}}
+</div>
+
+<div class="list-article2">
+  {{>molecules-article_block}} {{>molecules-article_block}} {{>molecules-article_block}} {{>molecules-article_block}}
+</div>
