--- a/patterns/00-atoms-images-article/00-atoms-images-article.mustache
+++ b/patterns/00-atoms-images-article/00-atoms-images-article.mustache
@@ -1,1 +1,1 @@
-<img src="../../image/girl.png" alt="Avatar" class="{{ styleModifier }}" />
+<img src="../../image/girl.png" alt="Avatar" class="article-image" />
