--- a/_patterns/01-molecules/blocks/article_block.mustache
+++ b/_patterns/01-molecules/blocks/article_block.mustache
@@ -1,5 +1,9 @@
 <div class="article_block">
-  {{>atoms-button}}
-  <h2>This is a button </h2>
-  {{>atoms-paragraph}}
+
+  {{>atoms-button_rubric}}
+  <div class="hover-article-on">  {{>atoms-hover-article}}</div>
+  {{>atoms-article}}
+<div class="title">Jean-Pierre Coffe arrêté pour trafic de bitcoins, plus de 700.000 euros détournés</div>
+<div class="resume">Ses amis et sa famille sous le choc, nous raconte les secrets de meilleures recettes avant qu’il ne soit trop tard. </div>
+<div class="autor">Jean Roucas / 31.09.17</div>
 </div>
