--- a/css/scss/abstracts/_variables.scss
+++ b/css/scss/abstracts/_variables.scss
@@ -107,7 +107,7 @@ $color-border: $color-gray-50;
     #TYPOGRAPHY
 \*------------------------------------*/
 
-$font : "brandon-grotesque-bold", "brandon-grotesque-medium-italic", "Helvetica", "Arial", sans-serif;
+$font : "brandon-grotesque-regular";
 
 
 $font-size-small : 0.75rem;
