--- a/_patterns/02-organismes/lists/article_list.mustache
+++ b/_patterns/02-organismes/lists/article_list.mustache
@@ -1,6 +1,13 @@
+<div class="list-article">
 {{>molecules-article_block}}
 {{>molecules-article_block}}
 {{>molecules-article_block}}
 {{>molecules-article_block}}
+</div>
+
+<div class="list-article2">
 {{>molecules-article_block}}
-<a href="#">See more</a>
+{{>molecules-article_block}}
+{{>molecules-article_block}}
+{{>molecules-article_block}}
+</div>
