--- a/css/style.scss
+++ b/css/style.scss
@@ -128,6 +128,8 @@ So feel free to use any of these approaches. Or don't. It's totally up to you.
 // @import "scss/components/text";
 // @import "scss/components/box";
 // @import "scss/components/feedback";
+@import "scss/components/article";
+@import "scss/organismes/article-list";
 
 
 
